# data_ia_framework

./: .env.example  .gitignore  Agents.md  Arquiteture_guidelines.md  Estrutura.md  LOG.md  Metodologia.md  README.md  SPEC.md  pyproject.toml  test_pkg_import.py
orientacoes/: Governance.md  Validation_rules.md  Visualization_rules.md  exemplo.md
src/ai_data_framework/: __init__.py
src/ai_data_framework/audit/: __init__.py  logger.py
src/ai_data_framework/cli/: __init__.py  main.py
src/ai_data_framework/core/: __init__.py  core.py  entities.py
src/ai_data_framework/hypothesis/: __init__.py  generator.py
src/ai_data_framework/ingestion/: __init__.py  loaders.py
src/ai_data_framework/llm/: __init__.py  client.py
src/ai_data_framework/pipeline/: __init__.py  orchestrator.py
src/ai_data_framework/privacy/: __init__.py
src/ai_data_framework/profiling/: __init__.py  analyzer.py
src/ai_data_framework/validation/: __init__.py  statistics.py  validator.py
src/ai_data_framework/visualization/: __init__.py  charts.py
tests/: __init__.py  test_core.py  test_hypothesis.py  test_ingestion.py  test_profiling.py  test_visualization.py
web/: index.html  server.py
web/assets/: index.html
web/assets/css/: style.css
web/assets/js/: app.js
