[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-data-framework"
version = "0.1.0"
description = "Framework analítico orientado a hipóteses para análise de dados com IA"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.9.0",
    "polars>=1.14.0",
    "pyarrow>=18.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "pyyaml>=6.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "tqdm>=4.66.0",
    "rich>=13.9.0",
    "tabulate>=0.9.0",
    "plotly>=5.24.0",
    "kaleido>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "hatch>=1.14.0",
]
llm = [
    "anthropic>=0.38.0",
    "openai>=1.55.0",
    "litellm>=1.52.0",
]

[project.scripts]
ai-data = "ai_data_framework.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_data_framework"]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "UP007", # use X | Y for union types (Python 3.12+ syntax)
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*", "polars.*", "pydantic.*", "plotly.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/ai_data_framework"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]